--- a/.github/workflows/discovery.yml
+++ b/.github/workflows/discovery.yml
@@ -35,6 +35,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      
+      - name: Install Playwright browser
+        run: |
+          playwright install chromium
 
       - name: Run discovery
         run: |
