--- a/.github/workflows/discovery.yml
+++ b/.github/workflows/discovery.yml
@@ -48,5 +48,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-debug-${{ github.job }}-${{ github.run_id }}
+          name: playwright-debug-${{ matrix.query }}
           path: "debug/"
