--- a/.github/workflows/parallel-channel-discovery.yml
+++ b/.github/workflows/parallel-channel-discovery.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r requirements-channel.txt
           playwright install chromium
 
       - name: Run Channel Discovery
