--- a/.github/workflows/parallel-discovery.yml
+++ b/.github/workflows/parallel-discovery.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r requirements-discovery.txt
           playwright install chromium
 
       - name: Run Discovery Batch
