feat: add GitHub Actions workflows for parallel channel and YouTube video discovery.

--- a/.github/workflows/parallel-discovery.yml
+++ b/.github/workflows/parallel-discovery.yml
@@ -40,7 +40,7 @@ jobs:
 
   discovery:
     needs: prepare-matrix
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
