--- a/.github/workflows/parallel-channel-discovery.yml
+++ b/.github/workflows/parallel-channel-discovery.yml
@@ -41,7 +41,7 @@ jobs:
 
   channel-discovery:
     needs: prepare-matrix
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
